test/1.2/errors/T_EOOB.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
bank b {
    register r[4] size 4 @ undefined;
}
parameter p = [];
method init {
    /// ERROR EOOB
    $b.r[4].size;
    /// ERROR EOOB
    $b.r[-1].size;
    /// ERROR EOOB
    [1, 2, 3][-1];
    /// ERROR EOOB
    [1, 2, 3][3];
    /// ERROR EOOB
    $p[0];
}
